# f1-stats-app

./: .gitignore  README.md  package-lock.json
backend/: .flake8  README.md  app.py  config.py  extensions.py  models.py  pyproject.toml  requirements.txt  utils.py  views.py
backend/instance/: f1_data.db  f1_data.db-journal  f1_stats.db
backend/migrations/: env.py
backend/migrations/versions/: a6378e08b7e5_remove_cached_columns_from_yeardata.py
backend/routes/: __init__.py  ai.py  constructors.py  drivers.py  overview.py  sessions.py  stats.py  sync.py  years.py
backend/services/: ai_service.py  constructor_service.py  driver_service.py  overview_service.py  session_service.py  sync_service.py  year_service.py
backend/tests/: conftest.py
backend/tests/routes/: test_ai.py  test_constructors.py  test_drivers.py  test_overview.py  test_sessions.py  test_sync.py  test_years.py
backend/tests/services/: test_ai_service.py  test_constructor_service.py  test_driver_service.py  test_overview_service.py  test_session_service.py  test_year_service.py
backend/utils/: __init__.py  blueprint_utils.py  fetch_f1_data.py
frontend/: .eslintrc.js  .lintstagedrc.json  .prettierignore  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.tsx  index.tsx
frontend/src/components/: DriversDetails.js  DriversTab.js  ErrorMessage.js  Header.js  OverviewTab.js  SessionsTab.js  SyncProgress.tsx  TabNavigation.js  ThemeToggle.tsx  YearSelector.js
frontend/src/constants/: common-constants.ts  config.js  (+1 more)
(+46 files in other folders)
