[tool.poetry]
name = "f1-stats-backend"
version = "0.1.0"
description = "The Flask backend for the F1 Stats App"
authors = ["Hunter Thompson <hunter.a.a.thompson@gmail.com>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
flask = {extras = ["async"], version = "^3.1.1"}
flask-cors = ">=6.0.0,<7.0.0"
flask-migrate = ">=4.1.0,<5.0.0"
flask-sqlalchemy = ">=3.1.1,<4.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
openai = ">=1.84.0,<2.0.0"
requests = ">=2.32.3,<3.0.0"
aiohttp = ">=3.12.9,<4.0.0"
python-dateutil = ">=2.9.0.post0,<3.0.0"
werkzeug = ">=3.1.3,<4.0.0"
pytest-asyncio = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
pytest = "^8.4.0"
pytest-flask = "^1.3.0"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
